// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExperimentList can expand an experiment to see its runs 1`] = `
<div>
  <div
    class="page"
  >
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-1442 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-1457 MuiInputLabel-root-1446 noMargin MuiInputLabel-formControl-1451 MuiInputLabel-animated-1454 MuiInputLabel-shrink-1453 MuiInputLabel-outlined-1456"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root-1477 MuiOutlinedInput-root-1464 noLeftPadding MuiInputBase-formControl-1478 MuiInputBase-adornedStart-1481 MuiOutlinedInput-adornedStart-1467"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-1494 MuiOutlinedInput-notchedOutline-1471 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-1495"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-1496 MuiInputAdornment-positionEnd-1499"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1501"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-1487 MuiOutlinedInput-input-1472 MuiInputBase-inputAdornedStart-1492 MuiOutlinedInput-inputAdornedStart-1475"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName"
          style="width: 25%;"
          title="Experiment name"
        >
          <span
            class="MuiButtonBase-root-1523 MuiTableSortLabel-root-1518 MuiTableSortLabel-active-1519 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1501 MuiTableSortLabel-icon-1520 MuiTableSortLabel-iconDirectionAsc-1522"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 50%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-1523 MuiTableSortLabel-root-1518 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1501 MuiTableSortLabel-icon-1520 MuiTableSortLabel-iconDirectionDesc-1521"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 25%;"
          title="Last 5 runs"
        >
          <span
            class="MuiButtonBase-root-1523 MuiTableSortLabel-root-1518 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Last 5 runs
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1501 MuiTableSortLabel-icon-1520 MuiTableSortLabel-iconDirectionAsc-1522"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="busyOverlay"
        />
        <div
          class="MuiCircularProgress-root-1573 MuiCircularProgress-colorPrimary-1576 MuiCircularProgress-indeterminate-1575 absoluteCenter"
          role="progressbar"
          style="width: 25px; height: 25px; z-index: 2;"
        >
          <svg
            class="MuiCircularProgress-svg-1578"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-1579 MuiCircularProgress-circleIndeterminate-1581"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
        <div
          class="expandableContainer"
        >
          <div
            aria-checked="false"
            class="tableRow row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell selectionToggle"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root-1523 MuiIconButton-root-1550 expandButton"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-1555"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-1501"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                    <path
                      d="M0 24V0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-1566"
                />
              </button>
            </div>
            <div
              class="cell"
              style="width: 25%;"
            >
              <a
                class="link"
                href="/experiments/details/test-experiment-id0"
                title="test experiment name0"
              >
                test experiment name0
              </a>
            </div>
            <div
              class="cell"
              style="width: 50%;"
            />
            <div
              class="cell"
              style="width: 25%;"
            >
              <div
                class="flex"
              >
                <span
                  style="margin: 0px 1px;"
                >
                  <div
                    class=""
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1501"
                      data-testid="node-status-sign"
                      focusable="false"
                      role="presentation"
                      style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                      />
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-1442 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-1477 MuiInput-root-1533 MuiInputBase-formControl-1478 MuiInput-formControl-1534"
          >
            <div
              class="MuiSelect-root-1526"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-1527 MuiSelect-selectMenu-1530 MuiInputBase-input-1487 MuiInput-input-1541"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1501 MuiSelect-icon-1532"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-1523 MuiButtonBase-disabled-1524 MuiIconButton-root-1550 MuiIconButton-disabled-1554"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-1555"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1501"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-1523 MuiButtonBase-disabled-1524 MuiIconButton-root-1550 MuiIconButton-disabled-1554"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-1555"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1501"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExperimentList renders a list of one experiment 1`] = `
<div
  className="page"
>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Experiment name",
          "sortKey": "name",
        },
        Object {
          "flex": 2,
          "label": "Description",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Last 5 runs",
          "sortKey": "last_run_created_at",
        },
      ]
    }
    disableSelection={true}
    emptyMessage="No experiments found. Click \\"Create experiment\\" to start."
    filterLabel="Filter experiments"
    getExpandComponent={[Function]}
    initialSortColumn="created_at"
    reload={[Function]}
    rows={
      Array [
        Object {
          "error": undefined,
          "expandState": 0,
          "id": undefined,
          "otherFields": Array [
            "test experiment name",
            "test experiment description",
            undefined,
          ],
        },
      ]
    }
    toggleExpansion={[Function]}
  />
</div>
`;

exports[`ExperimentList renders a list of one experiment with error 1`] = `
<div
  className="page"
>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Experiment name",
          "sortKey": "name",
        },
        Object {
          "flex": 2,
          "label": "Description",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Last 5 runs",
          "sortKey": "last_run_created_at",
        },
      ]
    }
    disableSelection={true}
    emptyMessage="No experiments found. Click \\"Create experiment\\" to start."
    filterLabel="Filter experiments"
    getExpandComponent={[Function]}
    initialSortColumn="created_at"
    reload={[Function]}
    rows={Array []}
    toggleExpansion={[Function]}
  />
</div>
`;

exports[`ExperimentList renders a list of one experiment with no description 1`] = `
<div
  className="page"
>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Experiment name",
          "sortKey": "name",
        },
        Object {
          "flex": 2,
          "label": "Description",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Last 5 runs",
          "sortKey": "last_run_created_at",
        },
      ]
    }
    disableSelection={true}
    emptyMessage="No experiments found. Click \\"Create experiment\\" to start."
    filterLabel="Filter experiments"
    getExpandComponent={[Function]}
    initialSortColumn="created_at"
    reload={[Function]}
    rows={Array []}
    toggleExpansion={[Function]}
  />
</div>
`;

exports[`ExperimentList renders a list of runs for given experiment 1`] = `
<div>
  <div
    class="page"
  >
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-1583 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-1598 MuiInputLabel-root-1587 noMargin MuiInputLabel-formControl-1592 MuiInputLabel-animated-1595 MuiInputLabel-shrink-1594 MuiInputLabel-outlined-1597"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root-1618 MuiOutlinedInput-root-1605 noLeftPadding MuiInputBase-formControl-1619 MuiInputBase-adornedStart-1622 MuiOutlinedInput-adornedStart-1608"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-1635 MuiOutlinedInput-notchedOutline-1612 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-1636"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-1637 MuiInputAdornment-positionEnd-1640"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1642"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-1628 MuiOutlinedInput-input-1613 MuiInputBase-inputAdornedStart-1633 MuiOutlinedInput-inputAdornedStart-1616"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName"
          style="width: 25%;"
          title="Experiment name"
        >
          <span
            class="MuiButtonBase-root-1664 MuiTableSortLabel-root-1659 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1642 MuiTableSortLabel-icon-1661 MuiTableSortLabel-iconDirectionDesc-1662"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 50%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-1664 MuiTableSortLabel-root-1659 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1642 MuiTableSortLabel-icon-1661 MuiTableSortLabel-iconDirectionDesc-1662"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 25%;"
          title="Last 5 runs"
        >
          <span
            class="MuiButtonBase-root-1664 MuiTableSortLabel-root-1659 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Last 5 runs
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1642 MuiTableSortLabel-icon-1661 MuiTableSortLabel-iconDirectionDesc-1662"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="busyOverlay"
        />
        <div
          class="MuiCircularProgress-root-1697 MuiCircularProgress-colorPrimary-1700 MuiCircularProgress-indeterminate-1699 absoluteCenter"
          role="progressbar"
          style="width: 25px; height: 25px; z-index: 2;"
        >
          <svg
            class="MuiCircularProgress-svg-1702"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle-1703 MuiCircularProgress-circleIndeterminate-1705"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-1583 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-1618 MuiInput-root-1674 MuiInputBase-formControl-1619 MuiInput-formControl-1675"
          >
            <div
              class="MuiSelect-root-1667"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-1668 MuiSelect-selectMenu-1671 MuiInputBase-input-1628 MuiInput-input-1682"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1642 MuiSelect-icon-1673"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-1664 MuiButtonBase-disabled-1665 MuiIconButton-root-1691 MuiIconButton-disabled-1695"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-1696"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1642"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-1664 MuiIconButton-root-1691"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-1696"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1642"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-1707"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExperimentList renders an empty list with empty state message 1`] = `
<div
  className="page"
>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Experiment name",
          "sortKey": "name",
        },
        Object {
          "flex": 2,
          "label": "Description",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Last 5 runs",
          "sortKey": "last_run_created_at",
        },
      ]
    }
    disableSelection={true}
    emptyMessage="No experiments found. Click \\"Create experiment\\" to start."
    filterLabel="Filter experiments"
    getExpandComponent={[Function]}
    initialSortColumn="created_at"
    reload={[Function]}
    rows={Array []}
    toggleExpansion={[Function]}
  />
</div>
`;

exports[`ExperimentList renders experiment names as links to their details pages 1`] = `
<WithStyles(Tooltip)
  enterDelay={300}
  placement="top-start"
  title="experiment name"
>
  <Link
    className="link"
    onClick={[Function]}
    replace={false}
    to="/experiments/details/experiment-id"
  >
    experiment name
  </Link>
</WithStyles(Tooltip)>
`;

exports[`ExperimentList renders last 5 runs statuses 1`] = `
<div
  className="flex"
>
  <span
    style={
      Object {
        "margin": "0 1px",
      }
    }
  >
    <WithStyles(Tooltip)
      title={
        <div>
          <div>
            Executed successfully
          </div>
        </div>
      }
    >
      <div>
        <pure(CheckCircleIcon)
          data-testid="node-status-sign"
          style={
            Object {
              "color": "#34a853",
              "height": 18,
              "width": 18,
            }
          }
        />
      </div>
    </WithStyles(Tooltip)>
  </span>
  <span
    style={
      Object {
        "margin": "0 1px",
      }
    }
  >
    <WithStyles(Tooltip)
      title={
        <div>
          <div>
            Pending execution
          </div>
        </div>
      }
    >
      <div>
        <pure(ScheduleIcon)
          data-testid="node-status-sign"
          style={
            Object {
              "color": "#9aa0a6",
              "height": 18,
              "width": 18,
            }
          }
        />
      </div>
    </WithStyles(Tooltip)>
  </span>
  <span
    style={
      Object {
        "margin": "0 1px",
      }
    }
  >
    <WithStyles(Tooltip)
      title={
        <div>
          <div>
            Resource failed to execute
          </div>
        </div>
      }
    >
      <div>
        <pure(ErrorIcon)
          data-testid="node-status-sign"
          style={
            Object {
              "color": "#d50000",
              "height": 18,
              "width": 18,
            }
          }
        />
      </div>
    </WithStyles(Tooltip)>
  </span>
  <span
    style={
      Object {
        "margin": "0 1px",
      }
    }
  >
    <WithStyles(Tooltip)
      title={
        <div>
          <div>
            Unknown status
          </div>
        </div>
      }
    >
      <div>
        <pure(HelpIcon)
          data-testid="node-status-sign"
          style={
            Object {
              "color": "#5f6368",
              "height": 18,
              "width": 18,
            }
          }
        />
      </div>
    </WithStyles(Tooltip)>
  </span>
  <span
    style={
      Object {
        "margin": "0 1px",
      }
    }
  >
    <WithStyles(Tooltip)
      title={
        <div>
          <div>
            Executed successfully
          </div>
        </div>
      }
    >
      <div>
        <pure(CheckCircleIcon)
          data-testid="node-status-sign"
          style={
            Object {
              "color": "#34a853",
              "height": 18,
              "width": 18,
            }
          }
        />
      </div>
    </WithStyles(Tooltip)>
  </span>
</div>
`;

exports[`ExperimentList shows error next to experiment when listing its last 5 runs fails 1`] = `
<div>
  <div
    class="page"
  >
    <div
      class="pageOverflowHidden"
    >
      <div>
        <div
          class="MuiFormControl-root-1049 filterBox"
          spellcheck="false"
          style="height: 48px; max-width: 100%; width: 100%;"
        >
          <label
            class="MuiFormLabel-root-1064 MuiInputLabel-root-1053 noMargin MuiInputLabel-formControl-1058 MuiInputLabel-animated-1061 MuiInputLabel-shrink-1060 MuiInputLabel-outlined-1063"
            data-shrink="true"
            for="tableFilterBox"
          >
            Filter experiments
          </label>
          <div
            class="MuiInputBase-root-1084 MuiOutlinedInput-root-1071 noLeftPadding MuiInputBase-formControl-1085 MuiInputBase-adornedStart-1088 MuiOutlinedInput-adornedStart-1074"
          >
            <fieldset
              aria-hidden="true"
              class="MuiPrivateNotchedOutline-root-1101 MuiOutlinedInput-notchedOutline-1078 filterBorderRadius"
              style="padding-left: 8px;"
            >
              <legend
                class="MuiPrivateNotchedOutline-legend-1102"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
            <div
              class="MuiInputAdornment-root-1103 MuiInputAdornment-positionEnd-1106"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1108"
                focusable="false"
                role="presentation"
                style="color: rgb(128, 134, 139); padding-right: 16px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
            <input
              aria-invalid="false"
              class="MuiInputBase-input-1094 MuiOutlinedInput-input-1079 MuiInputBase-inputAdornedStart-1099 MuiOutlinedInput-inputAdornedStart-1082"
              id="tableFilterBox"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="header"
      >
        <div
          class="columnName cell selectionToggle"
        >
          <span
            style="display: inline-block; min-width: 40px; width: 40px;"
          />
        </div>
        <div
          class="columnName"
          style="width: 25%;"
          title="Experiment name"
        >
          <span
            class="MuiButtonBase-root-1130 MuiTableSortLabel-root-1125 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Experiment name
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1108 MuiTableSortLabel-icon-1127 MuiTableSortLabel-iconDirectionDesc-1128"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 50%;"
          title="Description"
        >
          <span
            class="MuiButtonBase-root-1130 MuiTableSortLabel-root-1125 ellipsis"
            role="button"
            tabindex="0"
            title="Cannot sort by this column"
          >
            Description
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1108 MuiTableSortLabel-icon-1127 MuiTableSortLabel-iconDirectionDesc-1128"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="columnName"
          style="width: 25%;"
          title="Last 5 runs"
        >
          <span
            class="MuiButtonBase-root-1130 MuiTableSortLabel-root-1125 ellipsis"
            role="button"
            tabindex="0"
            title="Sort"
          >
            Last 5 runs
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1108 MuiTableSortLabel-icon-1127 MuiTableSortLabel-iconDirectionDesc-1128"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="scrollContainer"
        style="min-height: 60px;"
      >
        <div
          class="expandableContainer"
        >
          <div
            aria-checked="false"
            class="tableRow row"
            role="checkbox"
            tabindex="-1"
          >
            <div
              class="cell selectionToggle"
            >
              <button
                aria-label="Expand"
                class="MuiButtonBase-root-1130 MuiIconButton-root-1157 expandButton"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label-1162"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-1108"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 17l5-5-5-5v10z"
                    />
                    <path
                      d="M0 24V0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root-1173"
                />
              </button>
            </div>
            <div
              class="cell"
              style="width: 25%;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1108 icon"
                focusable="false"
                role="presentation"
                title="Failed to load the last 5 runs of this experiment"
                viewBox="0 0 24 24"
              >
                <path
                  d="M4.47 21h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0L2.74 18c-.77 1.33.19 3 1.73 3zM12 14c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1s1 .45 1 1v2c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
                />
              </svg>
              <a
                class="link"
                href="/experiments/details/undefined"
                title="exp1"
              >
                exp1
              </a>
            </div>
            <div
              class="cell"
              style="width: 50%;"
            />
            <div
              class="cell"
              style="width: 25%;"
            >
              <div
                class="flex"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <span
          class=""
        >
          Rows per page:
        </span>
        <div
          class="MuiFormControl-root-1049 verticalAlignInitial rowsPerPage"
        >
          <div
            class="MuiInputBase-root-1084 MuiInput-root-1140 MuiInputBase-formControl-1085 MuiInput-formControl-1141"
          >
            <div
              class="MuiSelect-root-1133"
            >
              <div
                aria-haspopup="true"
                aria-pressed="false"
                class="MuiSelect-select-1134 MuiSelect-selectMenu-1137 MuiInputBase-input-1094 MuiInput-input-1148"
                role="button"
                tabindex="0"
              >
                10
              </div>
              <input
                type="hidden"
                value="10"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1108 MuiSelect-icon-1139"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root-1130 MuiButtonBase-disabled-1131 MuiIconButton-root-1157 MuiIconButton-disabled-1161"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-1162"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1108"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
        <button
          class="MuiButtonBase-root-1130 MuiButtonBase-disabled-1131 MuiIconButton-root-1157 MuiIconButton-disabled-1161"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label-1162"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1108"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
